plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sprint.mission'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'org.postgresql:postgresql'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Swagger UI 활성화
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
    // aop 추가
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // https://mvnrepository.com/artifact/org.mapstruct/mapstruct
    implementation 'org.mapstruct:mapstruct:1.6.3'
    // https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    // https://mvnrepository.com/artifact/org.projectlombok/lombok-mapstruct-binding
    //annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

}

tasks.withType(JavaCompile) {
    options.annotationProcessorPath = configurations.annotationProcessor
}


tasks.named('test') {
    useJUnitPlatform()
}
